Closed Bug 780761 Opened 13 years ago Closed 13 years ago

Race condition in initializing message manager for window.opened <iframe mozbrowser>s causes test_browserElement_oop_OpenNamed.html (from bug 780546) to fail intermittently

Categories

(Core :: DOM: Core & HTML, defect)

x86_64
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla17

People

(Reporter: emorley, Assigned: justin.lebar+bug)

References

Details

(Keywords: intermittent-failure)

Attachments

(1 file)

Rev4 MacOSX Lion 10.7 mozilla-inbound opt test mochitests-2/5 on 2012-08-06 10:01:34 PDT for push 633d8533e7cf slave: talos-r4-lion-055 https://tbpl.mozilla.org/php/getParsedLog.php?id=14161964&tree=Mozilla-Inbound { 1138 INFO TEST-START | /tests/dom/browser-element/mochitest/test_browserElement_oop_OpenNamed.html creating 1! [TabChild] SHOW (w,h)= (0, 0) loading http://mochi.test:8888/tests/dom/browser-element/mochitest/file_browserElement_OpenNamed.html, 1 creating 1! 1139 INFO TEST-PASS | /tests/dom/browser-element/mochitest/test_browserElement_oop_OpenNamed.html | Should get just one popup. - false should equal false [TabChild] SHOW (w,h)= (0, 0) 1140 INFO TEST-PASS | /tests/dom/browser-element/mochitest/test_browserElement_oop_OpenNamed.html | Got openwindow event before showmodalprompt event. 1141 INFO TEST-PASS | /tests/dom/browser-element/mochitest/test_browserElement_oop_OpenNamed.html | undefined - success: loaded should equal success: loaded 1142 ERROR TEST-UNEXPECTED-FAIL | /tests/dom/browser-element/mochitest/test_browserElement_oop_OpenNamed.html | an unexpected uncaught JS exception reported through window.onerror - NS_ERROR_NOT_INITIALIZED: Component returned failure code: 0xc1f30001 (NS_ERROR_NOT_INITIALIZED) [nsIChromeFrameMessageManager.sendAsyncMessage] at resource:///components/BrowserElementParent.js:250 loading http://mochi.test:8888/tests/dom/browser-element/mochitest/file_browserElement_OpenNamed.html?test2, 1 1143 INFO TEST-END | /tests/dom/browser-element/mochitest/test_browserElement_oop_OpenNamed.html | finished in 98ms }
Summary: Intermittent test_browserElement_oop_OpenNamed.html | uncaught JS exception - Component returned failure code: 0xc1f30001 (NS_ERROR_NOT_INITIALIZED) [nsIChromeFrameMessageManager.sendAsyncMessage] at BrowserElementParent.js:250 → Race condition in initializing message manager for window.opened <iframe mozbrowser>s causes the test in bug 780546 to fail intermittently
Attached patch Patch, v1Splinter Review
An explanation of what's going on is in the patch.
Attachment #650346 - Flags: review?(bugs)
> An explanation of what's going on is in the patch. Erm, apparently that got truncated. > Calling show() causes EnsureMessageManager() to SetCallbackData() on the message manager. If we > don't do this, then the message manager will throw when we try to send a message.
Blocks: 780351
Please leave at a minimum the test name in the summary, or it breaks TBPL starring.
And thank you for looking into this :-)
Summary: Race condition in initializing message manager for window.opened <iframe mozbrowser>s causes the test in bug 780546 to fail intermittently → Race condition in initializing message manager for window.opened <iframe mozbrowser>s causes test_browserElement_oop_OpenNamed.html (from bug 780546) to fail intermittently
(In reply to Ed Morley [:edmorley] from comment #4) > Please leave at a minimum the test name in the summary, or it breaks TBPL > starring. Is the basename sufficient, or do I need the full path?
(In reply to Justin Lebar [:jlebar] from comment #6) > Is the basename sufficient, or do I need the full path? Just the basename is fine :-)
> Calling show() causes EnsureMessageManager() to SetCallbackData() on the message manager. If we > don't do this, then the message manager will throw when we try to send a message. See also bug 780546 comment 9; the only problem with that analysis was that I was looking at the wrong remote-browser-frame-shown call. :)
Assignee: nobody → justin.lebar+bug
Attachment #650346 - Flags: review?(bugs) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
Whiteboard: [orange]
Component: DOM: Mozilla Extensions → DOM
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: