Bug 780761 - Fix race condition in initialization of message manager for popups from <iframe mozbrowser>. r=smaug

Calling show() causes EnsureMessageManager() to SetCallbackData() on the message manager.  If we don't do this, then the message manager will throw when we try to send a message.